--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
     color:white;
 }
 
+.icono{
+    font-size: 2rem; 
+    color:white;
+    background-color: cornflowerblue;
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 12px;
+}
+
 header {
     padding-right: 0px !important;
     padding-left: 0px !important;
